[package]
name = "toggl_report_api_v2_interface"
version = "0.1.0"
authors = ["yajamon <yajamon.tatsuki@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
license = "MIT"
readme = "README.md"
repository = "https://github.com/yajamon/toggl_report_api_v2_interface-rs.git"
description = "Toggl Report API v2 interface."
keywords = ["toggl", "api"]

[dependencies]
